# perceptra-storage

./: MANIFEST.in  README.md  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: PROJECT_SUMMARY.md  USAGE_EXAMPLE.md
examples/: 01_basic_usage.py  02_django_integration.py  03_advanced_scenario.py  04_complete_workflow.py  05_remote_usage.py
perceptra_storage/: __init__.py  base.py  factory.py
perceptra_storage/adapters/: __init__.py  azure.py  local.py  minio.py  remote.py  s3.py
tests/: test_base.py  test_factory.py  test_local.py
